--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,31 +10,22 @@ jobs:
  test:
    runs-on: ubuntu-latest
    steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-python@v4
+     - uses: actions/checkout@v4
+     - uses: actions/setup-python@v5
        with:
          python-version: '3.10'
-         
-     - uses: actions/cache@v3
-       with:
-         path: |
-           venv
-           ~/.cache/pip
-         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-         restore-keys: |
-           ${{ runner.os }}-pip-
+         cache: 'pip'
 
      - name: Install dependencies
        run: |
-         python -m venv venv
-         source venv/bin/activate
+         python -m pip install --upgrade pip
          pip install -r requirements.txt
-         playwright install
+         playwright install --with-deps
 
      - name: Run tests
        run: |
-         source venv/bin/activate
-         pytest tests/unit/ --cov=src --junitxml=test-results/junit.xml
+         mkdir -p test-results
+         pytest tests/unit/ --cov=app --junitxml=test-results/junit.xml
          pytest tests/integration/
          pytest tests/e2e/
 
