--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,6 @@ dill==0.3.9
 exceptiongroup==1.2.2
 fastapi==0.115.4
 greenlet==3.1.1
-h11>=0.16.0
-httpcore>=1.0.9
-httpx>=0.28.1
 idna==3.10
 iniconfig==2.0.0
 isort==5.13.2
@@ -33,4 +30,5 @@ sniffio==1.3.1
 tomli==2.0.2
 tomlkit==0.13.2
 typing_extensions==4.12.2
+urllib3>=2.6.0
 uvicorn==0.32.0
